--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,28 +3,31 @@ name: Deploy to GitHub Pages
 on:
   push:
     branches:
-      - main  # Change this to your default branch if it's not 'main'
+      - main # Change this to your default branch if it's not 'main'
 
 jobs:
   deploy:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v2
-
-      - name: Setup SSH
-        uses: webfactory/ssh-agent@v0.5.3
+      - name: Checkout
+        uses: actions/checkout@v4
+      - name: Set up Node
+        uses: actions/setup-node@v4
         with:
-          ssh-private-key: ${{ secrets.DEPLOY_KEY }}
-
-      - name: Build and Deploy
-        run: |
-          npm install
-          npm run build
-          git config --global user.email "you@example.com"
-          git config --global user.name "Your Name"
-          git remote set-url origin git@github.com:larryp89/to-do-list-2.git
-          git add -A
-          git commit -m "Deploy to GitHub Pages"
-          git push origin gh-pages
+          node-version: 20
+          cache: "npm"
+      - name: Install dependencies
+        run: npm ci
+      - name: Build
+        run: npm run build
+      - name: Setup Pages
+        uses: actions/configure-pages@v4
+      - name: Upload artifact
+        uses: actions/upload-pages-artifact@v3
+        with:
+          # Upload dist folder
+          path: "./dist"
+      - name: Deploy to GitHub Pages
+        id: deployment
+        uses: actions/deploy-pages@v4
